# rizzler-hall-sensor

./: .gitignore  CMakeLists.txt  Kconfig  west.yml
app/: CMakeLists.txt  README.rst  debug.conf  prj.conf
app/boards/: nrf52dk_nrf52810.overlay
app/src/: ble.c  bluetooth_adv.c  bluetooth_adv.h  hall_sensor.c  hall_sensor.h  led_ctl.c  led_ctl.h  main.c
boards/arm/emunz_rhs810/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  emunz_rhs810-pinctrl.dtsi  emunz_rhs810.dts  emunz_rhs810.yaml  emunz_rhs810_defconfig
